2007-03-25  Brian Matherly  <brian@gramps-project.org>
	* src/ReportBase/_ReportOptions.py: Remove get_display_format (not used)
	* src/ReportBase/_BareReportDialog.py: 
	  Remove get_report_extra_menu_info (not used)

2007-03-25  Brian Matherly  <brian@gramps-project.org>
	* src/ReportBase/_ReportUtils.py
	* src/ReportBase/_CommandLineReport.py
	* src/ReportBase/_BareReportDialog.py
	* src/plugins/IndivComplete.py
	* src/plugins/NarrativeWeb.py
	* src/plugins/TimeLine.py
	* src/plugins/GraphViz.py
	* src/plugins/EventCmp.py
	* src/plugins/StatisticsChart.py
	* src/PluginUtils/_Options.py
	* src/PluginUtils/_Tool.py
	Remove get_report_filters() function. Let reports define the filter options
	themselves.

2007-03-24  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: add support for new directory type
	* src/GrampsDb/_GrampsDbBase.py: use normal pickle encoding
	* src/GrampsDb/_GrampsDBDir.py: new directory based type
	* src/GrampsDb/_GrampsDbFactories.py: add support for new directory type
	* src/Editors/_EditNote.py: only update on save
	* src/Selectors/_SelectPerson.py: use normal columns
	* src/GrampsDbUtils/_ReadGedcom.py: add support for new directory type
	* src/GrampsDbUtils/__init__.py: add support for new directory type
	* src/GrampsDbUtils/_Backup.py: fast pickle based backup
	* src/ArgHandler.py: add support for new directory type

2007-03-24  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/Editors/_EditAddress.py:
	* src/Editors/_EditLdsOrd.py:
	* src/Editors/_EditSourceRef.py:
	* src/Editors/_EditEventRef.py:
	* src/Editors/_EditMedia.py:
	* src/Editors/_EditName.py:
	* src/Editors/_EditEvent.py:
	* src/glade/gramps.glade:
	move date_entry(ValidatableMaskedEntry) out into glade.

2007-03-24  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/MarkupText.py (MarkupBuffer.set_text): better unicode encoding.
	* src/Editors/_EditPlace.py: source code encoding comment removed;
	EditPlace._validate_coordinate: proper unicode coding;